[package]
name = "tinylj"
version = "0.1.1"
authors = ["Dreae <dreae@dreae.onl>", "zatrit"]
build = "build.rs"
description = "Rust crate for calling LuaJIT from Rust"
repository = "https://github.com/zatrit/tinylj/"
readme = "README.md"
keywords = ["luajit", "lua"]
license = "MIT"

[dependencies]
libc = "0.2.32"

[build-dependencies]
luajit-src = "210"

[features]
lua52compat = []