[package]
name = "tinylj"
version = "0.1.3"
authors = ["Dreae <dreae@dreae.onl>", "zatrit"]
build = "build.rs"
description = "Rust crate for calling LuaJIT from Rust"
repository = "https://github.com/zatrit/tinylj/"
readme = "README.md"
keywords = ["luajit", "lua"]
license = "MIT"

[dependencies]
chlorine = { version = "1.0", features = ["int_extras"] }

[build-dependencies]
luajit-src = "210.4"

[features]
default = ["std"]
lua52compat = []
std = []